20240114 - Refactor recipes